--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-source-filesystem": "^1.5.39",
     "gatsby-transformer-remark": "^1.7.44",
     "react-helmet": "^5.2.0",
+    "react-simple-pie-chart": "^0.5.0",
     "styled-components": "^3.4.2"
   },
   "keywords": [
