--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-transformer-remark": "^1.7.44",
     "react-helmet": "^5.2.0",
     "react-simple-pie-chart": "^0.5.0",
+    "react-svg-piechart": "^2.1.1",
     "styled-components": "^3.4.2"
   },
   "keywords": [
