--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-helmet": "^5.2.0",
     "react-minimal-pie-chart": "^3.2.0",
     "react-simple-pie-chart": "^0.5.0",
+    "react-slidez": "0.0.28",
     "react-svg-piechart": "^2.1.1",
     "styled-components": "^3.4.2"
   },
